Production/Platform_V2/platform_v2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-v2-service
  namespace: terrestrialplatform-v2
spec:
  selector:
    app: platform-v2-app
  ports:
    - protocol: "TCP"
      port: 8022
      targetPort: 8080
  type: ClusterIP
