Production/Platform_V2/platform_v2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-v2-service
  namespace: terrestrialplatform-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: platform.tpcloud.tech
      http:
        paths:
          - path: /platform/(.*)
            pathType: Prefix

            backend:

              service:

                name: platform-v2-service

                port:

                  number: 8022
